force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/ucinn_ascendv2__Org_Wide_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Org Wide Configuration</label>
</CustomObject>