force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_ID__c</fullName>
    <label>Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>