force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Account_Name_Default_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Name_Default_Type__c</fullName>
    <description>Sets the default name type for both households and organizations used in code (ex. Full Name)</description>
    <label>Organization Name Default Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>