force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Async_Errors_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Async_Errors_Last_Run__c</fullName>
    <label>Async Errors Last Run</label>
    <type>DateTime</type>
</CustomField>