force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Consider_Department__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Consider_Department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Department</label>
    <type>Checkbox</type>
</CustomField>