force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Constituent_Name_Default_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Constituent_Name_Default_Type__c</fullName>
    <description>The default name type used in code (ex. Full Name)</description>
    <label>Constituent Name Default Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>