force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Default_Session_Operator__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Session_Operator__c</fullName>
    <label>Default Session Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>