force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Disable_Object_and_Field_Security_Check__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disable_Object_and_Field_Security_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable object and field  level security checks in ascend code.</description>
    <inlineHelpText>Disable object and field level security checks in ascend code.</inlineHelpText>
    <label>Disable Object and Field Security Check</label>
    <type>Checkbox</type>
</CustomField>