force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Household_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Record_Type_ID__c</fullName>
    <description>Allows for custom Recordtype to be used in place of Household.</description>
    <label>Household Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>