force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Household_Wealth_Rating_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Household_Wealth_Rating_Method__c</fullName>
    <description>Whether the household wealth rating is determined by the household members, or only by the household.

Possible values:
Household Only
Household Members</description>
    <inlineHelpText>Whether the household wealth rating is determined by the household members, or only by the household.

Possible values:
Household Only
Household Members</inlineHelpText>
    <label>Household Wealth Rating Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>