force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Insufficient_Access_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Insufficient_Access_Error_Message__c</fullName>
    <description>Error message for Aura Handled Exceptions where the cause is related to insufficient access.</description>
    <inlineHelpText>Error message for Aura Handled Exceptions where the cause is related to insufficient access.</inlineHelpText>
    <label>Insufficient Access Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>