force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Is_HEDA_Related_Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_HEDA_Related_Email_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HEDA Related Email Enabled</label>
    <type>Checkbox</type>
</CustomField>