force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Is_Multiple_Curr_Phone_For_Org_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Multiple_Curr_Phone_For_Org_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Configure if organizations are allowed to have multiple current status phones of same type</description>
    <inlineHelpText>Check to enable, or uncheck it to disable.</inlineHelpText>
    <label>Is Multiple Curr Phone For Org Enabled</label>
    <type>Checkbox</type>
</CustomField>