force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Is_Multiple_Current_Phones_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Multiple_Current_Phones_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Configure if your school allows a constituent to have multiple current status phones of same type</description>
    <inlineHelpText>Check to enable, or uncheck it to disable.</inlineHelpText>
    <label>Is Multiple Current Phones Enabled</label>
    <type>Checkbox</type>
</CustomField>