force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Is_Object_and_Field_Mapping_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Object_and_Field_Mapping_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Object and Field Mapping Enabled</label>
    <type>Checkbox</type>
</CustomField>