force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Is_Partial_Deceased_Date_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Partial_Deceased_Date_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using partial deceased date or full deceased date</description>
    <inlineHelpText>Check to enable, or uncheck it to disable.</inlineHelpText>
    <label>Is Partial Deceased Date Enabled</label>
    <type>Checkbox</type>
</CustomField>