force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__New_Contact_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__New_Contact_Record_Type_ID__c</fullName>
    <description>For overriding the New Contact Record Type in ascend logic.</description>
    <inlineHelpText>For overriding the New Contact Record Type in ascend logic.</inlineHelpText>
    <label>New Contact Record Type ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>