force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Phone_Extension_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Phone_Extension_Delimiter__c</fullName>
    <description>This defines the how phone numbers with extension to be shown on Contact Overview page phone fields</description>
    <label>Phone Extension Delimiter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>