force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Wealth_Rating_Export_Folder__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Export_Folder__c</fullName>
    <label>Wealth Rating Export Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>