force-app/main/default/objects/ucinn_ascendv2__Org_Wide_Configuration__c/fields/ucinn_ascendv2__Wealth_Rating_Rollup_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Rollup_Method__c</fullName>
    <label>Wealth Rating Rollup Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>